ActiveAdmin: styled flash messages

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -11,6 +11,7 @@
 @import "active_admin/mixins";
 @import "active_admin/base";
 @import "active_admin/toggle_panels";
+@import "active_admin/messages";
 
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
