--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -12,6 +12,7 @@
 @import "active_admin/base";
 @import "active_admin/toggle_panels";
 @import "active_admin/messages";
+@import "active_admin/ie_fixes";
 
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
