--- a/app/assets/stylesheets/libs.scss
+++ b/app/assets/stylesheets/libs.scss
@@ -5,6 +5,7 @@
 @import "bootstrap-datepicker/bootstrap-datepicker";
 @import "bootstrap-daterangepicker/daterangepicker-bs3";
 @import "select2";
+@import "selectize";
 @import "fullcalendar";
 @import "messenger";
 @import "animate-css";
