Remove Bootstrap from assets and use gem version

--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -11,7 +11,7 @@
  * file per style scope.
  *
  *= require_self
- *= require bootstrap/bootstrap.min
+ *= require bootstrap/bootstrap
  *= require ../../../vendor/assets/stylesheets/select2
  *= require ../../../vendor/assets/stylesheets/select2-bootstrap
  *= require ../../../vendor/assets/stylesheets/messenger/messenger
