--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -11,11 +11,9 @@
  * file per style scope.
  *
  *= require_self
- *= require bootstrap/bootstrap
- *= require select2/select2
- *= require select2/select2-bootstrap
- *= require messenger/messenger
- *= require messenger/messenger-theme-flat
+ *= require bootstrap
+ *= require select2
+ *= require messenger
  *= require_tree ../../../vendor/assets/stylesheets/.
  *= require theme
  */
