Remove Messenger from assets and use gem version

--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -14,8 +14,8 @@
  *= require bootstrap/bootstrap
  *= require select2/select2
  *= require select2/select2-bootstrap
- *= require ../../../vendor/assets/stylesheets/messenger/messenger
- *= require ../../../vendor/assets/stylesheets/messenger/messenger-theme-flat
+ *= require messenger/messenger
+ *= require messenger/messenger-theme-flat
  *= require_tree ../../../vendor/assets/stylesheets/.
  *= require theme
  */
