--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require_self
  *= require bootstrap
+ *= require bootstrap-daterangepicker/daterangepicker-bs3
  *= require select2
  *= require messenger
  *= require_tree ../../../vendor/assets/stylesheets/.
