Remove Animate from assets and use gem version

--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@
  *= require bootstrap-daterangepicker/daterangepicker-bs3
  *= require select2
  *= require messenger
+ *= require animate-css
  *= require_tree ../../../vendor/assets/stylesheets/.
  *= require theme
  */
