Remove Ionicons from assets and use gem version

--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require_self
  *= require font-awesome
+ *= require ionicons
  *= require bootstrap
  *= require bootstrap-switch
  *= require bootstrap-datepicker/bootstrap-datepicker
