Removed Brankic icons font set
since they are almost unused - used Brankic icons in templates replaced with Font Awesome and Ionicons alternatives

--- a/wolf-rails/app/assets/stylesheets/partials/pages/_signup.scss
+++ b/wolf-rails/app/assets/stylesheets/partials/pages/_signup.scss
@@ -15,7 +15,7 @@
 			background-color: #F2F5F8;
 
 			.logo {
-				.brankic-pen {
+				.fa-users {
 					color: #8CAAC0;
 				}
 			}
@@ -95,7 +95,7 @@
 		display: block;
 		text-decoration: none;
 
-		.brankic-pen {
+		.fa-users {
 			color: #FFFFD8;
 			font-size: 40px;
 
