--- a/wolf-rails/app/views/features/signup.html.erb
+++ b/wolf-rails/app/views/features/signup.html.erb
@@ -12,7 +12,7 @@
 		</div>
 
 		<a href="<%= root_url %>" class="logo">
-			<i class="brankic-pen"></i>
+			<i class="fa fa-users"></i>
 		</a>
 
 		<h3>Create Your Account Now</h3>
