--- a/wolf-rails/app/views/pricing/charts.html.erb
+++ b/wolf-rails/app/views/pricing/charts.html.erb
@@ -169,7 +169,7 @@
 			<div class="col-md-12">
 				<div class="wrapper clearfix">
 					<h4>
-						<span class="brankic-phone2"></span>
+						<span class="fa fa-phone"></span>
 						Unsure which plan is best for you? You can call our sales team any day at
 						<strong>1-800-123-4567</strong>
 					</h4>
