--- a/wolf-rails/app/views/shared/_skin_switcher.html.erb
+++ b/wolf-rails/app/views/shared/_skin_switcher.html.erb
@@ -1,6 +1,6 @@
 <div class="skin-switcher">
 	<div class="toggler">
-		<span class="brankic-brush"></span>
+		<span class="ion-paintbrush"></span>
 	</div>
 	<ul class="menu">
 		<li>
