--- a/wolf-rails/app/assets/stylesheets/partials/pages/_signin.scss
+++ b/wolf-rails/app/assets/stylesheets/partials/pages/_signin.scss
@@ -15,7 +15,7 @@
 			background: #F2F5F8;
 
 			.logo {
-				.brankic-pen {
+				.fa-users {
 					color: #8CAAC0;
 				}
 			}
@@ -95,7 +95,7 @@
 		display: block;
 		text-decoration: none;
 
-		.brankic-pen {
+		.fa-users {
 			color: #FFFFD8;
 			font-size: 43px;
 
