Remove jQuery Minicolor from assets and use gem version

--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -20,6 +20,7 @@
  *= require select2
  *= require messenger
  *= require animate-css
+ *= require jquery-minicolors
  *= require_tree ../../../vendor/assets/stylesheets/.
  *= require theme
  */
