Remove Offline.js from assets and use gem version

--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@
  *= require messenger
  *= require animate-css
  *= require jquery-minicolors
+ *= require offline
  *= require_tree ../../../vendor/assets/stylesheets/.
  *= require theme
  */
