--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -22,6 +22,7 @@
  *= require animate-css
  *= require jquery-minicolors
  *= require offline
+ *= require summernote
  *= require_tree ../../../vendor/assets/stylesheets/.
  *= require theme
  */
