Remove Shepherd from assets and use gem version

--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -23,6 +23,7 @@
  *= require jquery-minicolors
  *= require offline
  *= require summernote
+ *= require tether-shepherd
  *= require_tree ../../../vendor/assets/stylesheets/.
  *= require theme
  */
