--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@
  *= require bootstrap-datepicker/bootstrap-datepicker
  *= require bootstrap-daterangepicker/daterangepicker-bs3
  *= require select2
+ *= require fullcalendar
  *= require messenger
  *= require animate-css
  *= require jquery-minicolors
