Remove Highlight.js from assets and use gem version

--- a/wolf-rails/app/assets/stylesheets/application.css
+++ b/wolf-rails/app/assets/stylesheets/application.css
@@ -23,6 +23,7 @@
  *= require animate-css
  *= require jquery-minicolors
  *= require jquery-datatables
+ *= require highlightjs
  *= require offline
  *= require summernote
  *= require tether-shepherd
