Fixed missing icon after Ionicons update

--- a/app/assets/stylesheets/partials/pages/_account.scss
+++ b/app/assets/stylesheets/partials/pages/_account.scss
@@ -66,21 +66,21 @@
 						}
 
 						i {
-							min-width: 30px;
+							padding-right: 10px;
 
-							&.ion-ios7-person-outline {
+							&.ion-ios-person-outline {
 								font-size: 30px;
 								position: relative;
 								top: 4px;
 							}
 
-							&.ion-ios7-email-outline {
+							&.ion-ios-email-outline {
 								font-size: 24px;
 								position: relative;
 								top: 4px;
 							}
 
-							&.ion-ios7-help-outline {
+							&.ion-ios-help-outline {
 								font-size: 24px;
 								position: relative;
 								top: 4px;
