--- a/app/views/account/settings.html.erb
+++ b/app/views/account/settings.html.erb
@@ -9,7 +9,7 @@
 	<ul class="menu">
 		<li>
 			<a href="<%= settings_account_index_path %>" class="active">
-				<i class="ion-ios7-person-outline"></i>
+				<i class="ion-ios-person-outline"></i>
 				Profile
 			</a>
 		</li>
@@ -21,13 +21,13 @@
 		</li>
 		<li>
 			<a href="<%= notifications_account_index_path %>">
-				<i class="ion-ios7-email-outline"></i>
+				<i class="ion-ios-email-outline"></i>
 				Notifications
 			</a>
 		</li>
 		<li>
 			<a href="<%= support_account_index_path %>">
-				<i class="ion-ios7-help-outline"></i>
+				<i class="ion-ios-help-outline"></i>
 				Support
 			</a>
 		</li>
