--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -18,7 +18,7 @@
 	<div class="row project-list">
 		<div class="project new">
 			<a href="#">
-				<i class="ion-ios7-plus-outline"></i>
+				<i class="ion-ios-plus-outline"></i>
 				<span class="info">
 					Create a New Project
 				</span>
