Updated gem jQuery Raty
to fix assets precompilation for production

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 //= require animate-css
 //= require jquery-minicolors
 //= require jquery-datatables
+//= require jquery-raty/lib/jquery.raty
 //= require highlightjs
 //= require offline
 //= require summernote
