Icons replaced with helper call (Ionicons)
manual replace

--- a/app/views/forms/new_customer.html.erb
+++ b/app/views/forms/new_customer.html.erb
@@ -44,8 +44,7 @@
       <div class="col-sm-10 col-md-8">
         <div class="has-feedback">
           <input type="text" class="form-control mask-phone" name="customer[phone]" />
-            <i class="ion-information-circled form-control-feedback" data-toggle="tooltip" title="Tooltip helper example">
-            </i>
+            <%= ion_icon "information-circled", class: "form-control-feedback", data: { toggle: "tooltip" }, title: "Tooltip helper example" %>
         </div>
       </div>
       </div>
@@ -54,8 +53,7 @@
       <div class="col-sm-10 col-md-8">
         <div class="has-feedback">
             <input type="text" class="form-control mask-cc" name="customer[cc]" />
-            <i class="ion-information-circled form-control-feedback" data-toggle="tooltip" title="Credit card masked input example">
-            </i>
+            <%= ion_icon "information-circled", class: "form-control-feedback", data: { toggle: "tooltip" }, title: "Credit card masked input example" %>
         </div>
       </div>
       </div>
