--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -239,8 +239,7 @@
               <td>
                 Mar 11, 11:50am
 
-                <i class="ion-alert-circled" data-toggle="tooltip" title="This order is urgent to ship">
-                </i>
+                <%= ion_icon "alert-circled", data: { toggle: "tooltip" }, title: "This order is urgent to ship" %>
               </td>
               <td><span class="label label-default">Paid</span></td>
               <td>$399.99</td>
